# CGamE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
core/: CGamE_Core.c  CGamE_Object.c  CGamE_Registry.c  CGamE_Renderer.c  CGamE_Result.c  CMakeLists.txt
core/include/: CGamE.h  CGamE_Core.h  CGamE_Object.h  CGamE_Pipeline.h  CGamE_Prop.h  CGamE_Renderer.h  CGamE_Result.h  CGmaE_ObjRegistry.h
include/glad/: glad.h
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.c  matrix.c
src/CGamEcore/: CGamE.h  CGamE_Camera.c  CGamE_Camera.h  CGamE_Component.c  CGamE_Component.h  CGamE_Context.c  CGamE_Context.h  CGamE_Hook.c  CGamE_Hook.h  CGamE_IO.c  CGamE_IO.h  CGamE_Lib.c  CGamE_Lib.h  CGamE_Log.c  CGamE_Log.h  CGamE_Object.c  CGamE_Object.h  CGamE_Renderer.c  CGamE_Renderer.h  CGamE_Resource.c  CGamE_Resource.h  CGamE_Tags.c  CGamE_Tags.h  CGamE_Vector.c  CGamE_Vector.h  CGamE_Window.h  CGamEmain.c  CGame_Object.c  CMakeLists.txt  README.md
src/Sandbox/: CMakeLists.txt  main.c
tests/: CGamE_Test.h  CMakeLists.txt  Test_Camera.c  Test_Component.c  Test_Hook.c
tests/general/: CMakeLists.txt  main.c
